# libgabgui

./: CMakeLists.txt  simulation.ui
include/gabgui/: environment_2d.hpp  plot_widget.hpp  run.hpp  simulation.hpp
rc/: icons.qrc
src/: environment_2d.cpp  plot_widget.cpp  run.cpp  simulation.cpp
ui/: environment_2d.ui  simulation.ui
